This this the changelog file for the Pothos GPU toolkit.

Release 0.1.1 (pending)
==========================

- INCOMPATIBLITY: some stats blocks directly store double instead of Pothos::Objects

Release 0.1.0 (2020-10-18)
==========================

- Initial full public release.

Release 0.0.2 (2020-07-31)
==========================

- Renamed to PothosGPU.
- Fixed complex block generation.

Release 0.0.1 (2020-07-16)
==========================

- Feature-frozen initial beta.